k8s-cluster-configuration/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-deployment
  namespace: cyangate
  labels:
    app: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-app
          image: europe-central2-docker.pkg.dev/cyangate/task-repo/spring-boot-enpoint:1.2
          ports:
            - containerPort: 8080
