k8s-cluster-configuration/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app-deployment
  namespace: cyangate
  labels:
    app: frontend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: europe-central2-docker.pkg.dev/cyangate/task-repo/vuejs-frontend
          ports:
            - containerPort: 80
      tolerations:
        - key: "tier"
          operator: "Equal"
          value: "frontend"
          effect: "NoSchedule"
