k8s-cluster-configuration/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: cyangate
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
