k8s-cluster-configuration/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: cyangate
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
